Proiect Culori - final

--- a/CURS 2/Racheta/Culori/templates/hex_color.html
+++ b/CURS 2/Racheta/Culori/templates/hex_color.html
@@ -6,16 +6,13 @@
     <title>Document</title>
     <style>
         body {
-            background-color: rgb({{rosu}}, {{verde}}, {{albastru}});
+            background-color: {{culoare_hex}};
         }
     </style>
 </head>
 <body>
-
     <div>
-        Pagina cu culoare random ...
-        {{rosu}} {{verde}} {{albastru}}
+        Aici va fi culoarea respectiva !
     </div>
-
 </body>
 </html>
