--- a/CURS 6/Joc/templates/rock_paper.html
+++ b/CURS 6/Joc/templates/rock_paper.html
@@ -23,9 +23,9 @@
 
     
     {% if client %}
-        <p> {{ client }} </p>
-        <p> {{server}} </p>
-        <p> {{rezultat}} </p>
+        <p> Ai ales: {{ client }} </p>
+        <p> Serverul a ales: {{server}} </p>
+        <p> Rezultatul este: {{rezultat}} </p>
     {% endif %}
         
 
