--- a/CURS 6/Joc/templates/rock_paper.html
+++ b/CURS 6/Joc/templates/rock_paper.html
@@ -20,9 +20,9 @@
     </form>
 
     {% if client %}
-        <p> {{client}} </p>
-        <P> {{server}} </P>
-        <p> {{rezultat}} </p>
+        <p> Ai ales: {{client}} </p>
+        <P> Serverul a ales: {{server}} </P>
+        <p> Rezultatul este: {{rezultat}} </p>
     {% endif %}
 
 </body>
