--- a/CURS 8/ecommerce/shop/templates/product_details.html
+++ b/CURS 8/ecommerce/shop/templates/product_details.html
@@ -6,6 +6,7 @@
     <title>product_details</title>
 </head>
 <body>
-    <h1>product_details</h1>
+    <h1> {{ current_product_model.title }} </h1>
+    <p> {{ current_product_model.content }} </p>
 </body>
 </html>
