--- a/CURS 9/ToDoProject/ToDoApp/templates/todo_list.html
+++ b/CURS 9/ToDoProject/ToDoApp/templates/todo_list.html
@@ -12,6 +12,14 @@
 </head>
 <body>
     <h1>Lista ToDo</h1>
+    <form action="">
+        <select name="filter" id="" onchange="this.form.submit()">
+            <option value="all">Selecteaza tot</option>
+            <option value="done">Done</option>
+            <option value="undone">ToDo</option>
+        </select>
+        <input type="submit" value="Alege">
+    </form>
 
     <ol>
         {% for model in model_list %}
